@startuml

title __CONTROLLER's Class Diagram__\n

    namespace ub.edu.controller {
      class ub.edu.controller.ControladorGUI {
          {static} - uniqueInstance : ControladorGUI
          + addClient()
          + addSerieToMyList()
          + addUser()
          + canAddUserToClient()
          + getDuracioVisualitzada()
          + getEpisodis()
          {static} + getInstance()
          + getTemporades()
          + init()
          + isEpisodiVisualitzat()
          + listMyContinueWatchingList()
          + listMyList()
          + listMyWatchedList()
          + listUsuaris()
          + llistarCatalegSeries()
          + registerObserver()
          + removeSerieFromMyList()
          + validateClient()
          + valorarEpisodiCor()
          + valorarEpisodiEstrellas()
          + visualitzarEpisodi()
          - ControladorGUI()
      }
    }

  


    namespace ub.edu.controller {
      class ub.edu.controller.ControllerTESTS {
          + ControllerTESTS()
          + addClient()
          + addSerieToMyList()
          + addUser()
          + canAddUserToClient()
          + existsNameUser()
          + ferFollow()
          + ferUnfollow()
          + getDuracioVisualitzada()
          + getEpisodis()
          + getTemporades()
          + init()
          + isEpisodiVisualitzat()
          + isTakenUsername()
          + isValidNameClient()
          + listMyContinueWatchingList()
          + listMyList()
          + listMyWatchedList()
          + listUsuaris()
          + listWatchingList()
          + llistarCatalegSeries()
          + llistarFollowers()
          + llistarFollowings()
          + modificarPerfil()
          + mostrarDetallsSerie()
          + registerObserver()
          + removeSerieFromMyList()
          + validateClient()
          + validateDNI()
          + validateLoginUser()
          + validatePassword()
          + valorarEpisodiCor()
          + valorarEpisodiEstrellas()
          + veurePerfil()
          + visualitzarEpisodi()
      }
    }

  

    namespace ub.edu.controller {
      interface ub.edu.controller.IController {
          {abstract} + addClient()
          {abstract} + addSerieToMyList()
          {abstract} + addUser()
          {abstract} + getDuracioVisualitzada()
          {abstract} + getEpisodis()
          {abstract} + getTemporades()
          {abstract} + init()
          {abstract} + isEpisodiVisualitzat()
          {abstract} + listMyContinueWatchingList()
          {abstract} + listMyList()
          {abstract} + listMyWatchedList()
          {abstract} + listUsuaris()
          {abstract} + llistarCatalegSeries()
          {abstract} + registerObserver()
          {abstract} + removeSerieFromMyList()
          {abstract} + validateClient()
          {abstract} + valorarEpisodiCor()
          {abstract} + valorarEpisodiEstrellas()
          {abstract} + visualitzarEpisodi()
      }
    }

  

  ub.edu.controller.ControladorGUI .up.|> ub.edu.controller.IController
  ub.edu.controller.ControladorGUI o-- ub.edu.model.Facade : facana
  ub.edu.controller.ControladorGUI o-- ub.edu.view.UBFLIXParty : view
  ub.edu.controller.ControllerTESTS .up.|> ub.edu.controller.IController
  ub.edu.controller.ControllerTESTS o-- ub.edu.model.Facade : facana


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
